project(ConicSections)
cmake_minimum_required(VERSION 2.8)
find_package(SFML 2 REQUIRED window system)
find_package(Thor 2 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(SFGUI REQUIRED)
aux_source_directory(. SRC_LIST)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -g")
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${THOR_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${SFGUI_LIBRARY})
